tweak login url

--- a/main_page/templates/main_page/login.html
+++ b/main_page/templates/main_page/login.html
@@ -10,7 +10,7 @@
         <p>Welcome, {{ user.username }} !</p>
 
         {% else %}
-        <a href="{ %provider_login_url 'google' %}">Login with Google</a>
+        <a href="{ %provider_login_url "google" %}">Login with Google</a>
         {% endif %}
 
     </body>
