--- a/main_page/templates/main_page/navbar.html
+++ b/main_page/templates/main_page/navbar.html
@@ -1,16 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">CivicConnect</a>
-    <div id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'main_page:home_page' %}">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'main_page:email_page' %}">Email</a>
-          </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'main_page:login_page' %}">Login</a>
-          </li>
-      </ul>
-    </div>
-  </nav>
+{% load socialaccount %}
+{% load static %}
+    <link rel="stylesheet" href="{% static 'main_page/navbar.css' %}" />
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">CivicConnect</a>
+        <div id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'main_page:home_page' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'main_page:email_page' %}">Email</a>
+                </li>
+            </ul>
+        </div>
+        <!-- Source for Right-Align https://www.codeply.com/go/qhaBrcWp3v -->
+        <div class="collapse navbar-collapse text-right">
+            <ul class="navbar-nav ml-auto flex-nowrap">
+                <li class="nav-item">
+                    {% if user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'main_page:home_page' %}">
+                        {{ user.username }}
+                        <img class="login-icon" src="{% static 'main_page/user_icon.png' %}" alt="user" />
+                    </a>
+                    {% else %}
+                    <a class="nav-link" href="{% provider_login_url 'google' %}">
+                        Login
+                        <img class="login-icon" src="{% static 'main_page/login_icon.png' %}" alt="key" />
+                    </a>
+                    {% endif %}
+                </li>
+            </ul>
+        </div>
+    </nav>
