create resource page

--- a/main_page/templates/main_page/navbar.html
+++ b/main_page/templates/main_page/navbar.html
@@ -11,6 +11,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'main_page:email_page' %}">Email</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'main_page:resource_page' %}">Resources</a>
+                </li>
             </ul>
         </div>
         <!-- Source for Right-Align https://www.codeply.com/go/qhaBrcWp3v -->
