write resource page

--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     {% include 'main_page/navbar.html' %}
-    {% block content %}{% endblock %}
+    {% for issue in issue_list %}
+        <div id="{{ issue.name }}">{{ issue.name.upper }}</div>
+    {% endfor %}
 </body>
 </html>
