--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -13,17 +13,13 @@
     {% include 'main_page/navbar.html' %}
     {% for issue in issue_list %}
         {% if issue.has_resources %}
-            <div id="{{ issue.id_name }}" class="issue-header">
-                <h2>{{ issue.name }}</h2>
-                {% for resource in issue.resource_set.all %}
-                    {% if resource.active %}
-                        <a href="{{ resource.url }}">{{ resource.title }}</a>
-                        {% if resource.user_resource %}
-                            <h5> - Submitted by {{ resource.submitter.name }}</h5>
-                        {% endif %}
+            <div id="{{ issue.id_name }}" class="issue-header">{{ issue.name.uppper }}</div>
+                {% for resource in issue.active_resources %}
+                    <a href="{{ resource.url }}">{{ resource.title }}</a>
+                    {% if resource.user_resource %}
+                        <h5>< - Submitted by {{ resource.submitter.username }}</h5>
                     {% endif %}
                 {% endfor %}
-            </div>
         {% endif %}
     {% endfor %}
 </body>
