--- a/email_sys/templates/email_sys/prompt.html
+++ b/email_sys/templates/email_sys/prompt.html
@@ -1,3 +1,4 @@
+<html>
 <title>Would you like to use an existing template from the drop down menu or start from scratch?</title>
 <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -10,3 +11,4 @@
   </div>
 </div>
 <a class="btn btn-primary btn-lg" href="#" role="button">Start from scratch</a>
+</html>
