--- a/email_sys/templates/email_sys/template.html
+++ b/email_sys/templates/email_sys/template.html
@@ -1,7 +1,9 @@
 {% load crispy_forms_tags %}
+<html>
 <title> Read and edit your email: </title>
 <form method='POST'>
 {% csrf_token %}
   {{ form|crispy }}
    <button type="submit" class="btn btn-primary" >Submit</button>
 </form>
+</html>
