--- a/email_sys/templates/email_sys/preview.html
+++ b/email_sys/templates/email_sys/preview.html
@@ -9,5 +9,6 @@
             <p>Error: No template</p>
         {% endif %}
     </div>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Send</a>
 </main>
 </html>
