--- a/main_page/templates/main_page/resource_submit.html
+++ b/main_page/templates/main_page/resource_submit.html
@@ -4,7 +4,7 @@
 {% if not user.is_authenticated %}
 <!-- Redirect to login page if user is not logged in -->
 <script>
-    window.location.replace("{% url 'main_page:login_page' %}")
+    window.location.replace("{% provider_login_url 'google' %}")
 </script>
 {% endif %}
 <html lang="en">
