--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -26,5 +26,6 @@
             </ul>
         {% endif %}
     {% endfor %}
+    <a id="CreateResourceButton" href="{% url 'main_page:resource_submit_page' ">Add Resource</a>
 </body>
 </html>
