--- a/main_page/templates/main_page/resource_thanks.html
+++ b/main_page/templates/main_page/resource_thanks.html
@@ -13,6 +13,6 @@
     <p>
         Thank you for contributing a resource to CivicConnect! Your resource is currently pending approval by the site administrators.
     </p>
-    <a href="{% url 'main_page:resource_submit_page' %}">Return to Resources</a>
+    <a href="{% url 'main_page:resource_page' %}">Return to Resources</a>
 </body>
 </html>
