--- a/main_page/templates/main_page/resource_thanks.html
+++ b/main_page/templates/main_page/resource_thanks.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Resources - Civic Connect</title>
+    <title>Civic Connect - Thanks</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'main_page/resource_thanks.css' %}" />
 </head>
 <body>
-    <p>
-        Thank you for contributing a resource to CivicConnect! Your resource is currently pending approval by the site administrators.
-    </p>
-    <a href="{% url 'main_page:resource_page' %}">Return to Resources</a>
+    <div style="text-align: center">
+        <p>
+            Thank you for contributing a resource to CivicConnect! Your resource is currently pending approval by the site administrators.
+        </p>
+        <a href="{% url 'main_page:resource_page' %}">Return to Resources</a>
+    </div>
 </body>
 </html>
