more style tweaks

--- a/main_page/templates/main_page/resource_submit.html
+++ b/main_page/templates/main_page/resource_submit.html
@@ -47,7 +47,7 @@
                 <input type="checkbox" name="anonymous" id="submitAnonymous" />
             </div>
             <input type="hidden" name="submitter" value={{ user.id }} />
-            <button type="submit" value="Submit" class="btn btn-primary" />
+            <button type="submit" value="Submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </body>
