--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -26,6 +26,6 @@
             </ul>
         {% endif %}
     {% endfor %}
-    <a id="CreateResourceButton" href="{% url 'main_page:resource_submit_page' %}">Add Resource</a>
+    <a id="CreateResourceButton" href="{% url 'main_page:resource_submit_page' %}" class="btn btn-primary">Add Resource</a>
 </body>
 </html>
