change error message color

--- a/main_page/templates/main_page/resource_submit.html
+++ b/main_page/templates/main_page/resource_submit.html
@@ -20,7 +20,7 @@
     {% include 'main_page/navbar.html' %}
     <div id="mainContent">
         {% if error_message %}
-        <p><strong>{{ error_message }}</strong></p>
+        <p style="color: red"><strong>{{ error_message }}</strong></p>
         {% endif %}
         <h2>Submit Resource</h2>
         <!-- Resource for form https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=vertical-form-layout -->
