--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -13,5 +13,16 @@
 <body>
     {% include 'main_page/navbar.html' %}
     {% block content %}{% endblock %}
+
+
+    <div class= "container text-center d-flex align-items-center justify-content-center h-100">
+        <div class= "jumbotron style = border-radius:20px">
+            <h1>
+                Welcome User! Check out our Resources Page!
+            </h1>
+        </div>
+    </div>
+    
+
 </body>
 </html>
