--- a/email_sys/templates/email_sys/email_prompt.html
+++ b/email_sys/templates/email_sys/email_prompt.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<style>
+.wrapper {
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
+}
+</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,6 +21,7 @@
 <body>
     {% include 'main_page/navbar.html' %}
     <h>Would you like to use an existing template from the drop down menu or start from scratch?</h>
+    <div class="wrapper">
     <div class="dropdown show">
         <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select</a>
 
@@ -21,6 +31,8 @@
             {% endfor %}
         </div>
     </div>
+    </div>
     <a class="btn btn-primary btn-lg" href="{% url 'email_sys:scratch_page' %}" role="button">Start from scratch</a>
+
 </body>
 </html>
