contact list page stub

--- a/main_page/templates/main_page/contact_list.html
+++ b/main_page/templates/main_page/contact_list.html
@@ -12,6 +12,14 @@
 </head>
 <body>
     {% include 'main_page/navbar.html' %}
-    <p>User: {{ cc_user }}</p>
+    {% if needs_address %}
+        <p>You need an address</p>
+    {% else %}
+        <ul>
+            {% for contact in contacts %}
+            <h2>{{ contact.name }} - {{ contact.office }}</h2>
+            {% endfor %}
+        </ul>
+    {% endif %}
 </body>
 </html>
