--- a/main_page/templates/main_page/contact_list.html
+++ b/main_page/templates/main_page/contact_list.html
@@ -9,7 +9,7 @@
     <title>Government Officials</title>
     <link rel="icon" type="image/x-icon" src="{% static 'main_page/favicon.ico' %}" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'main_page/resources.css' %}" />
+    <link rel="stylesheet" href="{% static 'main_page/contact_list.css' %}" />
 </head>
 <body>
     {% include 'main_page/navbar.html' %}
