--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -43,7 +43,7 @@
             </form>
             {% else %}
             <ul>
-                <li>{{ str(contacts) }}</li>
+                <li>{{ contacts }}</li>
                 <li>{{ needs_address }}</li>
                 {% for contact in contacts %}
                 <li>{{ contact.name }} - {{ contact.office }}</li>
