--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -42,14 +42,15 @@
                 <button type="submit" value="Submit" class="btn btn-primary">Search</button>
             </form>
             {% else %}
+            <h3>My Government Officials</h3>
             <ul>
                 {% for contact in contacts %}
                     <li class="list-group-item">
-                        <div>
+                        <div class="official-contact-info" style="display: grid; text-align: left">
                             {% if contact.photo %}
-                                <img src="{{ contact.photo }}" width="50" height="50" />
+                                <img src="{{ contact.photo }}"  height="75" alt="{{ contact.name }}"/>
                             {% endif %}
-                            <p>
+                            <p style="grid-column: 2">
                                 <strong>{{ contact.name }}</strong><br />
                                 <strong>{{ contact.office }}</strong><br />
                                 {% if contact.email %}
