--- a/main_page/static/main_page/home_page.css
+++ b/main_page/static/main_page/home_page.css
@@ -1,9 +1,9 @@
 .official-contact-info {
 	.display: grid;
 	.text-align: left;
-	.grid-template-columns: 150px 1fr;
+	.grid-template-columns: 200px 1fr;
 }
 
 .email {
-	color: blue;
+	font-style: italic;
 }
