--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -1,4 +1,5 @@
 ﻿{% load static %}
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,52 +20,56 @@
     <div class="container text-center d-flex align-items-center justify-content-center h-100">
         <div class="jumbotron style = border-radius:20px">
             <h1>
-                Welcome User! Check out our Resources Page!
+                Welcome {% if user.is_authenticated %}{{ user.first_name }}{% else %}User{% endif %}! Check out our Resources Page!
             </h1>
         </div>
     </div>
     <div class="container text-center d-flex align-items-center justify-content-center h-100">
         <div class="jumbotron style = border-radius:20px">
             {% if needs_address %}
-            <h3>Find my Government Officials</h3>
-            <!-- Resource for form https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=vertical-form-layout -->
-            <form action="{% url 'main_page:home_page' %}" method="post">
-                {% csrf_token %}
-                <div class="form-group">
-                    <label for="address">Address</label>
-                    <input type="text" name="address" id="address" />
-                </div>
-                {% if user.is_authenticated %}
-                <div class="form-group">
-                    <label for="saveContactInfo" style="display: inline">Save my contact info</label>
-                    <input type="checkbox" name="save_info" id="saveContactInfo" />
-                </div>
-                {% endif %}
-                <button type="submit" value="Submit" class="btn btn-primary">Search</button>
-            </form>
+                <h3>Find my Government Officials</h3>
+                <!-- Resource for form https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=vertical-form-layout -->
+                <form action="{% url 'main_page:home_page' %}" method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="address">Address</label>
+                        <input type="text" name="address" id="address" />
+                    </div>
+                    {% if user.is_authenticated %}
+                    <div class="form-group">
+                        <label for="saveContactInfo" style="display: inline">Save my contact info</label>
+                        <input type="checkbox" name="save_info" id="saveContactInfo" />
+                    </div>
+                    {% endif %}
+                    <button type="submit" value="Submit" class="btn btn-primary">Search</button>
+                </form>
             {% else %}
-            <h3>My Government Officials</h3>
-            <ul>
-                {% for contact in contacts %}
-                    <li class="list-group-item">
-                        <div class="official-contact-info" style="display: grid; text-align: left">
-                            {% if contact.photo %}
-                                <img src="{{ contact.photo }}"  height="100" alt="{{ contact.name }}"/>
-                            {% endif %}
-                            <p style="grid-column: 2">
-                                <strong>{{ contact.name }}</strong><br />
-                                <strong>{{ contact.office }}</strong><br />
-                                {% if contact.email %}
-                                    <font class="email">{{ contact.email }}<br /></font>
+                <h3>My Government Officials</h3>
+                <div id="contactGrid">
+                    {% for level in contacts %}
+                    <ul>
+                        {% for contact in contacts %}
+                        <li class="list-group-item">
+                            <div class="official-contact-info" style="display: grid; text-align: left">
+                                {% if contact.photo %}
+                                <img src="{{ contact.photo }}" height="100" alt="{{ contact.name }}" />
                                 {% endif %}
-                                {% for line in contact.get_address_lines %}
+                                <p style="grid-column: 2">
+                                    <strong>{{ contact.name }}</strong><br />
+                                    <strong>{{ contact.office }}</strong><br />
+                                    {% if contact.email %}
+                                    <font class="email">{{ contact.email }}<br /></font>
+                                    {% endif %}
+                                    {% for line in contact.get_address_lines %}
                                     {{ line }}<br />
-                                {% endfor %}
-                            </p>
-                        </div>
-                    </li>
-                {% endfor %}
-            </ul>
+                                    {% endfor %}
+                                </p>
+                            </div>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                    {% endfor %}
+                </div>
             {% endif %}
         </div>
     </div>
