--- a/main_page/templates/main_page/home_view.html
+++ b/main_page/templates/main_page/home_view.html
@@ -20,7 +20,7 @@
     <div class="container text-center d-flex align-items-center justify-content-center h-100">
         <div class="jumbotron style = border-radius:20px">
             <h1>
-                Welcome {% if user.is_authenticated %}{{ user.first_name }}{% else %}User{% endif %}! Check out our Resources Page!
+                Welcome {% if user.is_authenticated and user.first_name %}{{ user.first_name }}{% else %}User{% endif %}! Check out our Resources Page!
             </h1>
         </div>
     </div>
@@ -52,16 +52,16 @@
                                 <li class="list-group-item">
                                     <div class="official-contact-info" style="display: grid; text-align: left">
                                         {% if contact.photo %}
-                                        <img src="{{ contact.photo }}" height="100" alt="{{ contact.name }}" />
+                                            <img src="{{ contact.photo }}" height="100" alt="{{ contact.name }}" />
                                         {% endif %}
                                         <p style="grid-column: 2">
                                             <strong>{{ contact.name }}</strong><br />
                                             <strong>{{ contact.office }}</strong><br />
                                             {% if contact.email %}
-                                            <font class="email">{{ contact.email }}<br /></font>
+                                                <font class="email">{{ contact.email }}<br /></font>
                                             {% endif %}
                                             {% for line in contact.get_address_lines %}
-                                            {{ line }}<br />
+                                                {{ line }}<br />
                                             {% endfor %}
                                         </p>
                                     </div>
