mailto template navbar

--- a/email_sys/templates/email_sys/template_email.html
+++ b/email_sys/templates/email_sys/template_email.html
@@ -1,1 +1,16 @@
-<a href="mailto:someone@example.com?subject={{template.title}}&body={{template.body}}">Send email</a>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Resources - Civic Connect</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'main_page/resources.css' %}" />
+</head>
+<body>
+    {% include 'main_page/navbar.html' %}
+    <a href="mailto:someone@example.com?subject={{template.title}}&body={{template.body}}">Send email</a>
+</body>
+</html>
