--- a/email_sys/templates/email_sys/template_email.html
+++ b/email_sys/templates/email_sys/template_email.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     {% include 'main_page/navbar.html' %}
-    <a href="mailto:someone@example.com?subject={{template.title}}&body={{template.body}}">Send email</a>
+    <!--<a href="mailto:someone@example.com?subject={{template.title}}&body={{template.body}}">Send email</a>-->
+    <a href="mailto:someone@example.com?subject=This is subject&body=The body of the email">Send email</a>
 </body>
 </html>
