--- a/email_sys/templates/email_sys/email_view.html
+++ b/email_sys/templates/email_sys/email_view.html
@@ -19,32 +19,53 @@
 
         <div class = "col-xs-1" align = "center">
             <div class="form-group" style ="width: 300px;">
-                <label for="exampleInputEmail1">Email address</label>
+                <!--<label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">Enter your representatives email.</small>
+                <small id="emailHelp" class="form-text text-muted">Enter your representatives email.</small>-->
                  <!--Also add a dropdown-->
             </div>
             
             <div class="form-group" style ="width: 1000px;">
                  <!--Temporarily using resource page, but we'd want a separate template page, which will prefill this page with text. Is there also a way to prefill an email with text?-->
                 <!--<label for = "emailTextArea">Enter your message here or use an <a href="{% url 'main_page:resource_page' %}">exisiting template</a></label>-->
+                <style>
+                    p    {color:black;}
+                    p    {margin: 20px;}
+                    label {font-size:23px;}
+                    .flex{
+                        margin:50px;
+                    }
+                </style>
+
                 <label for = "emailTextArea">Would you like to use an existing template from the drop down menu or start from scratch?</label>
-                <div class="d-flex justify-content-center">
+                <div id = "flex" class="d-flex justify-content-center">
                     <a href="mailto:" target="_blank" class="btn btn-primary">Send Email From Scratch</a>
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Select Template
                         </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                            <a class="dropdown-item" href="{% url 'email_sys:scratch_page' %}">Template 1</a>
-                            <a class="dropdown-item" href="#">Template 2</a>
-                            <a class="dropdown-item" href="#">Template 3</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">More Templates</a>
-                        </div>
+
+
+                        {% if drop_down_list %}
+                        <!--<ul>-->
+                        
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                {% for template in drop_down_list %}
+                                  
+                                    <a class="dropdown-item" href="{% url 'email_sys:template_email_page' template.id %}">{{ template.title }}</a>
+                                {% endfor %}
+                                <a class="dropdown-item" href="#">More Templates</a>
+                            </div>
+                           
+                            <!--<li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>-->
+
+                        <!--</ul>-->
+                        {% endif %}
+
+
                       </div>
                 </div>                
-                <textarea class = "form-control" id = "emailTextArea" rows = "10"></textarea>
+                <!--<textarea class = "form-control" id = "emailTextArea" rows = "10"></textarea>-->
             </div>
 
 
