updated template html

--- a/email_sys/templates/email_sys/template_email.html
+++ b/email_sys/templates/email_sys/template_email.html
@@ -34,7 +34,7 @@
             <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">Subject: {{template.title}}</h6>
             <pre class="card-text">{{template.body}}</pre>
-            <a href="mailto:someone@example.com?subject={{template.title}}&body={{urlbody}}"><b>Send Email</b></a>
+            <a href="mailto:someone@example.com?subject={{urltitle}}&body={{urlbody}}"><b>Send Email</b></a>
             
             </div>
         </div>
