--- a/email_sys/templates/email_sys/template_email.html
+++ b/email_sys/templates/email_sys/template_email.html
@@ -33,8 +33,8 @@
         <div class="card" style="width: 50rem;">
             <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">Subject: {{template.title}}</h6>
-            <p class="card-text">{{template.body}}</p>
-            <a href="mailto:someone@example.com?subject={{template.title}}&body={{template.body}}"><b>Send Email</b></a>
+            <pre class="card-text">{{template.body}}</pre>
+            <a href="mailto:someone@example.com?subject={{urltitle}}&body={{urlbody}}"><b>Send Email</b></a>
             
             </div>
         </div>
