--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -15,7 +15,7 @@
     <nav class="navbar-light bg-light">
         <!-- Navbar by Gungor Budak https://codepen.io/gungorbudak/pen/ooKNpz -->
         <div class="input-group">
-            <form action="{% url 'main_page:resources' %}" method="get">
+            <form action="{% url 'main_page:resource_page' %}" method="get">
                 <input type="text" class="form-control" name="filter" placeholder="Search Resources">
                 <div class="input-group-append">
                     <button class="btn btn-secondary" type="button">
